# flight_fuzzy_controller

./: .gitignore  CMakeLists.txt  README.md  get_tools.sh  run.sh
controller/altitude/: CMakeLists.txt  FuzzyController.py  FuzzyControllerGUI.py  PlannerGUI.py  altitude-controller.py  main.cpp
controller/altitude/model/: altitude.fcl
modules/: pyMultiwii.py  utils2.py
